--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-on-heroku==1.1.2
 gunicorn==20.1.0
 Pillow==9.2.0
 psycopg2-binary==2.9.3
-python-dotenv==0.20.0
+python-decouple==3.6
 sqlparse==0.4.2
 typing_extensions==4.3.0
 tzdata==2022.1
